align item and fixed more html

--- a/css/screen.css
+++ b/css/screen.css
@@ -135,6 +135,7 @@ h1 {
 }
 
 img {
+  align-items: right;
   width: 50%;
   display: block;
   margin-left: 25%;
